# AI-Toolkit

./: README.md  pyproject.toml
aitoolkit/agents/: agent_factory.py  github_search_agent.py
aitoolkit/api/: app.py  external_api.py  initialize.py
aitoolkit/api/agents/: __init__.py  agents.py
aitoolkit/tools/github/: github_search.py
